# MilTWM

./: .gitignore  CMakeLists.txt  CMakePresets.json  commands.nu  compile_commands.json
src/: channel.c  channel.h  doublylinkedlist.c  doublylinkedlist.h  error.c  error.h  keyboard.c  keyboard.h  linked_list.c  linked_list.h  main.c  messages.h  queue.c  queue.h  shared_memory.c  shared_memory.h  tiling.c  tiling.h  wm_dll.c
